# py-lapper

./: .gitignore  README.md  README.rst  build.sh  pyproject.toml
docs/: conf.py  index.rst
examples/: ex1.py  ex2.py
py_lapper/: __init__.py  lib.py
tests/: test_py_lapper.py
