[tool.poetry]
name = "py_lapper"
version = "0.9.0"
description = "A pure python port of nim-lapper."
authors = ["Seth Stadick <sstadick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
