[tool.poetry]
name = "py_lapper"
version = "0.9.2"
description = "A pure python port of nim-lapper."
authors = ["Seth Stadick <sstadick@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sstadick/py-lapper"
repository = "https://github.com/sstadick/py-lapper"
keywords = ["intervals", "bioinformatics", "algorithm"]

include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
coverage-badge = "^1.0.1"
coverage = "^5.0.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
